# cmake

./: README.md
01-hello/: CMakeLists.txt  CMakePresets.json  main.cpp
01-hello-expected/: CMakeLists.txt  main.cpp
02-pattern-match-rust/: CMakeLists.txt  main.cpp
03-library/: CMakeLists.txt
04-library-directories/: CMakeLists.txt
04-library-directories/app/: CMakeLists.txt
04-library-directories/src/my_lib/: CMakeLists.txt  my_lib.c
05-variables/: CMakeLists.txt
05-variables/app/: CMakeLists.txt  main.c
05-variables/src/my_lib/: CMakeLists.txt  my_lib.c  my_lib.h
06-test-win-ubuntu/: CMakeLists.txt  Makefile  main.c
06-test-win-ubuntu/include/: printa.h
06-test-win-ubuntu/linux/: printa.c
06-test-win-ubuntu/win/: printa.c
07-lua-cpp/: CMakeLists.txt  Makefile
07-lua-cpp/app/: Main.cpp
07-lua-cpp/include/: LuaConfig.h
08-sdl/: CMakeLists copy.txt  CMakeLists.txt  Main.cpp  Makefile  WinMakefile  readme.md
09-calculator/: CMakeLists.txt  main.cpp  print.h  sum.cpp
10-calculator-headers-source/print/include/print_lib/: print.h
11-calculator-script/: CMakeLists.txt  main.cpp
11-calculator-script/sum/: CMakeLists.txt
12-conditional/: CMakeLists.txt
13-loops/: CMakeLists.txt
14-functions/: CMakeLists.txt  main.cpp
14-functions/01-constexpr/: main.cpp
14-functions/01-math/: CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
14-functions/01-math/src/: main.cpp  math.cpp  math.hpp
14-functions/01-math/test/: test_math.cpp  test_unit.cpp
14-functions/02-run-time/: CMakeLists.txt  main.cpp
15-install/: CMakeLists.txt
15-install/print/: CMakeLists.txt
15-install/print/src/: print.cpp
15-install/sum/: CMakeLists.txt
15-install/sum/include/sum_lib/: sum.h
15-install/sum/src/: sum.cpp
16-using-export-package-ex-15/: CMakeLists.txt  main.cpp
17-sdl-project/: CMakeLists.txt  Main.cpp  readme.md
18-google-test/: CMakeLists.txt
18-http-requests/: CMakeLists.txt  main.cpp  vcpkg.json
18-tests/boost-vcpkg/: CMakeLists.txt  Main.cpp  vcpkg.json
18-tests/gtest-vcpkg/: CMakeLists.txt  vcpkg.json
19-shared-dynamic/: CMakeLists.txt
19-shared-dynamic/calculator/: CMakeLists.txt
19-shared-dynamic/calculator/src/: calculator.cpp
19-stl/01/: Main.cpp
19-tests/boost-vcpkg/: CMakeLists.txt  test_one.cpp  test_two.cpp  test_unit.cpp
20-qt-gui/: CMakeLists.txt  CMakePresets.json  mainwindow.cpp  mainwindow.h  mainwindow.ui  vcpkg.json
20-test-pre-compiled/: CMakeLists.txt  main.cpp
21-jsoncpp/: CMakeLists.txt
21-jsoncpp/libs/jsoncpp/share/jsoncpp/: jsoncpp-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
21-jsoncpp/libs/jsoncpp/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
21-jsoncpp/libs/jsoncpp/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
22-niohmann-json/: CMakePresets.json  main.cpp
22-test/: main.cpp  vcpkg.json
23-curl/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
24-cpr-http-requests/: CMakeLists.txt  main.cpp  vcpkg.json
25-imgui/: CMakeLists.txt  main.cpp
26-asio-udp-client/: CMakeLists.txt  main.cpp  vcpkg.json
26-asio-udp-server/: CMakePresets.json  main.cpp
27-chip8/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
27-chip8-imgui-sdl/: CMakeLists.txt  CMakePresets.json  main.cpp  todo.md
27-chip8-imgui-sdl/include/: Chip8.hpp  Chip8Cpu.hpp  Chip8Keyboard.hpp  Chip8Memory.hpp  Chip8Registers.hpp  Chip8Screen.hpp  Chip8Stack.hpp  Config.hpp
27-chip8-imgui-sdl/src/: Chip8.cpp  Chip8Cpu.cpp  Chip8Keyboard.cpp  Chip8Memory.cpp  Chip8Screen.cpp  Chip8Stack.cpp
27-chip8/src/: window.hpp
28-threads/: CMakeLists.txt  main.cpp
29-queue/: example-1.cpp  example-2.cpp
30-threads-project/: CMakeLists.txt  CMakePresets.json  main copy.cpp  main.cpp  vcpkg.json
31-c-macros/: CMakeLists.txt  main.c  main2.c
32-bitwise-bitshift/: CMakeLists.txt
32-bitwise-bitshift/src/: CMakeLists.txt  main.c
32-bitwise-bitshift/src/and_operator/: CMakeLists.txt  and_operator.c  and_operator.h
32-bitwise-bitshift/src/or_operator/: CMakeLists.txt  or_operator.c  or_operator.h
niohmann-json/: CMakeLists.txt
